# Blueberry

./: .gitignore  CMakeLists.txt  README.md  blueberry.tscn  build_errors.md  build_warnings.md  ideas.txt  project.godot
art/: First Texture.png.import
prefabs/: console.tscn
scripts/: BrewSerializer.cs  BrewSerializer.cs.uid  Console.cs  Console.cs.uid  EditorMain.cs  EditorMain.cs.uid
shaders/: fonts.frag
src/: Input.h  main.c
src/Implementations/: miniaudio.c
tests/: hi.t
